Retro-compatibilidad con Java 8 (#270)
* Modificaciones para hacer el juego compatible con Java 8

Se logró la retrocompatibilidad de TODOS los proyectos excepto el proyecto `design`.

* Retrocompatibilidad en proyecto `server`